--- a/Process.qmd
+++ b/Process.qmd
@@ -7,3 +7,87 @@ execute:
   message: false
 ---
 
+
+```{r}
+# Load required libraries
+library(ggplot2)
+library(dplyr)
+
+# Create the coefficient data for F7 and F8 electrodes
+coeff_data <- data.frame(
+  disorder = c("Acute stress disorder", "Adjustment disorder", "Alcohol use disorder", 
+               "Behavioral addiction disorder", "Bipolar disorder", "Depressive disorder",
+               "Obsessive compulsive disorder", "Panic disorder", "Posttraumatic stress disorder",
+               "Schizophrenia", "Social anxiety disorder"),
+  
+  # F7 electrode data
+  f7_estimate = c(0.030, 0.073, 0.017, 0.005, 0.080, 0.030, 0.047, 0.077, 0.035, 0.081, 0.067),
+  f7_conf_low = c(-0.051, -0.001, -0.049, -0.064, 0.018, -0.026, -0.029, 0.011, -0.040, 0.022, 0.001),
+  f7_conf_high = c(0.110, 0.147, 0.083, 0.074, 0.143, 0.085, 0.123, 0.143, 0.111, 0.139, 0.133),
+  
+  # F8 electrode data  
+  f8_estimate = c(-0.030, -0.105, -0.046, -0.078, -0.087, -0.041, -0.062, -0.025, -0.046, -0.054, -0.030),
+  f8_conf_low = c(-0.104, -0.190, -0.106, -0.145, -0.154, -0.089, -0.139, -0.086, -0.116, -0.109, -0.092),
+  f8_conf_high = c(0.044, -0.021, 0.014, -0.011, -0.020, 0.008, 0.014, 0.037, 0.023, 0.001, 0.033)
+)
+
+# Add significance indicators
+coeff_data$f7_significant <- !(coeff_data$f7_conf_low <= 0 & coeff_data$f7_conf_high >= 0)
+coeff_data$f8_significant <- !(coeff_data$f8_conf_low <= 0 & coeff_data$f8_conf_high >= 0)
+
+# Create F7 plot
+f7_plot <- ggplot(coeff_data, aes(x = reorder(disorder, f7_estimate), y = f7_estimate)) +
+  geom_point(aes(color = f7_significant), size = 3) +
+  geom_errorbar(aes(ymin = f7_conf_low, ymax = f7_conf_high, color = f7_significant), 
+                width = 0.2, size = 0.8) +
+  geom_hline(yintercept = 0, linetype = "dashed", color = "gray50") +
+  scale_color_manual(values = c("FALSE" = "gray60", "TRUE" = "#e74c3c"), 
+                     name = "Significant", labels = c("No", "Yes")) +
+  coord_flip() +
+  labs(
+    title = "Delta Power Coefficients at F7 Electrode by Psychiatric Disorder",
+    subtitle = "F7 electrode positioned over left anterior temporal cortex\n(language processing, emotional memory, and auditory processing)",
+    x = "Psychiatric Disorder",
+    y = "Delta Power Coefficient (95% CI)",
+    caption = "Four disorders show significantly increased left temporal delta power (bipolar, panic, social anxiety, schizophrenia),\nsuggesting shared left-lateralized dysfunction in emotional and cognitive processing regions."
+  ) +
+  theme_minimal() +
+  theme(
+    plot.title = element_text(size = 14, face = "bold"),
+    plot.subtitle = element_text(size = 11, color = "gray30"),
+    plot.caption = element_text(size = 10, color = "gray40", hjust = 0),
+    axis.text.y = element_text(size = 10),
+    legend.position = "bottom"
+  )
+
+# Create F8 plot
+f8_plot <- ggplot(coeff_data, aes(x = reorder(disorder, f8_estimate), y = f8_estimate)) +
+  geom_point(aes(color = f8_significant), size = 3) +
+  geom_errorbar(aes(ymin = f8_conf_low, ymax = f8_conf_high, color = f8_significant), 
+                width = 0.2, size = 0.8) +
+  geom_hline(yintercept = 0, linetype = "dashed", color = "gray50") +
+  scale_color_manual(values = c("FALSE" = "gray60", "TRUE" = "#3498db"), 
+                     name = "Significant", labels = c("No", "Yes")) +
+  coord_flip() +
+  labs(
+    title = "Delta Power Coefficients at F8 Electrode by Psychiatric Disorder",
+    subtitle = "F8 electrode positioned over right anterior temporal cortex\n(spatial processing, prosody, and non-verbal emotional processing)",
+    x = "Psychiatric Disorder",
+    y = "Delta Power Coefficient (95% CI)",
+    caption = "Multiple disorders show reduced right temporal delta power, with significant decreases in adjustment and\nbehavioral addiction disorders, indicating right-hemisphere compensation or altered connectivity patterns."
+  ) +
+  theme_minimal() +
+  theme(
+    plot.title = element_text(size = 14, face = "bold"),
+    plot.subtitle = element_text(size = 11, color = "gray30"),
+    plot.caption = element_text(size = 10, color = "gray40", hjust = 0),
+    axis.text.y = element_text(size = 10),
+    legend.position = "bottom"
+  )
+
+# Display the plots
+print(f7_plot)
+print(f8_plot)
+```
+
+
