--- a/Process.qmd
+++ b/Process.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Process "
+title: "FP Electrodes"
 format: html
 execute:
   echo: false
@@ -7,87 +7,269 @@ execute:
   message: false
 ---
 
-
 ```{r}
-# Load required libraries
-library(ggplot2)
-library(dplyr)
+# Load libraries quietly
+suppressPackageStartupMessages({
+  library(tidyverse)
+  library(ggplot2)
+  library(dplyr)
+  library(tidyr)
+  library(plotly)
+  library(htmlwidgets)
+})
 
-# Create the coefficient data for F7 and F8 electrodes
-coeff_data <- data.frame(
-  disorder = c("Acute stress disorder", "Adjustment disorder", "Alcohol use disorder", 
-               "Behavioral addiction disorder", "Bipolar disorder", "Depressive disorder",
-               "Obsessive compulsive disorder", "Panic disorder", "Posttraumatic stress disorder",
-               "Schizophrenia", "Social anxiety disorder"),
-  
-  # F7 electrode data
-  f7_estimate = c(0.030, 0.073, 0.017, 0.005, 0.080, 0.030, 0.047, 0.077, 0.035, 0.081, 0.067),
-  f7_conf_low = c(-0.051, -0.001, -0.049, -0.064, 0.018, -0.026, -0.029, 0.011, -0.040, 0.022, 0.001),
-  f7_conf_high = c(0.110, 0.147, 0.083, 0.074, 0.143, 0.085, 0.123, 0.143, 0.111, 0.139, 0.133),
-  
-  # F8 electrode data  
-  f8_estimate = c(-0.030, -0.105, -0.046, -0.078, -0.087, -0.041, -0.062, -0.025, -0.046, -0.054, -0.030),
-  f8_conf_low = c(-0.104, -0.190, -0.106, -0.145, -0.154, -0.089, -0.139, -0.086, -0.116, -0.109, -0.092),
-  f8_conf_high = c(0.044, -0.021, 0.014, -0.011, -0.020, 0.008, 0.014, 0.037, 0.023, 0.001, 0.033)
-)
+# Load dataset
+extract_path <- "C:/Users/jishn/projects/Psychiatric-diagnosis"
+file_path <- file.path(extract_path, "EEG.machinelearing_data_BRMH.csv")
+x <- read.csv(file_path)
 
-# Add significance indicators
-coeff_data$f7_significant <- !(coeff_data$f7_conf_low <= 0 & coeff_data$f7_conf_high >= 0)
-coeff_data$f8_significant <- !(coeff_data$f8_conf_low <= 0 & coeff_data$f8_conf_high >= 0)
-
-# Create F7 plot
-f7_plot <- ggplot(coeff_data, aes(x = reorder(disorder, f7_estimate), y = f7_estimate)) +
-  geom_point(aes(color = f7_significant), size = 3) +
-  geom_errorbar(aes(ymin = f7_conf_low, ymax = f7_conf_high, color = f7_significant), 
-                width = 0.2, size = 0.8) +
-  geom_hline(yintercept = 0, linetype = "dashed", color = "gray50") +
-  scale_color_manual(values = c("FALSE" = "gray60", "TRUE" = "#e74c3c"), 
-                     name = "Significant", labels = c("No", "Yes")) +
-  coord_flip() +
-  labs(
-    title = "Delta Power Coefficients at F7 Electrode by Psychiatric Disorder",
-    subtitle = "F7 electrode positioned over left anterior temporal cortex\n(language processing, emotional memory, and auditory processing)",
-    x = "Psychiatric Disorder",
-    y = "Delta Power Coefficient (95% CI)",
-    caption = "Four disorders show significantly increased left temporal delta power (bipolar, panic, social anxiety, schizophrenia),\nsuggesting shared left-lateralized dysfunction in emotional and cognitive processing regions."
-  ) +
+# ---------------------------
+# Scatter plot: FP1 vs FP2 delta power
+# ---------------------------
+scatter_plot <- ggplot(x, aes(x = AB.A.delta.a.FP1, y = AB.A.delta.b.FP2, color = specific.disorder)) +
+  geom_point(alpha = 0.7, size = 2) +
   theme_minimal() +
+  labs(
+    title = "FP1 vs FP2 Delta Power by Psychiatric Disorder",
+    subtitle = "Strong positive correlation between left and right frontal electrodes across all disorder types",
+    x = "Absolute Delta Power (FP1)",
+    y = "Absolute Delta Power (FP2)",
+    color = "Disorder"
+  ) +
   theme(
-    plot.title = element_text(size = 14, face = "bold"),
-    plot.subtitle = element_text(size = 11, color = "gray30"),
-    plot.caption = element_text(size = 10, color = "gray40", hjust = 0),
-    axis.text.y = element_text(size = 10),
-    legend.position = "bottom"
+    plot.title = element_text(hjust = 0.5, size = 12),
+    plot.subtitle = element_text(hjust = 0.5, size = 9, color = "gray50"),
+    axis.title = element_text(size = 10),
+    axis.text = element_text(size = 8),
+    legend.title = element_text(size = 9),
+    legend.text = element_text(size = 8),
+    legend.key.size = unit(0.5, "cm"),
+    plot.margin = margin(15, 10, 10, 10)
   )
 
-# Create F8 plot
-f8_plot <- ggplot(coeff_data, aes(x = reorder(disorder, f8_estimate), y = f8_estimate)) +
-  geom_point(aes(color = f8_significant), size = 3) +
-  geom_errorbar(aes(ymin = f8_conf_low, ymax = f8_conf_high, color = f8_significant), 
-                width = 0.2, size = 0.8) +
-  geom_hline(yintercept = 0, linetype = "dashed", color = "gray50") +
-  scale_color_manual(values = c("FALSE" = "gray60", "TRUE" = "#3498db"), 
-                     name = "Significant", labels = c("No", "Yes")) +
-  coord_flip() +
-  labs(
-    title = "Delta Power Coefficients at F8 Electrode by Psychiatric Disorder",
-    subtitle = "F8 electrode positioned over right anterior temporal cortex\n(spatial processing, prosody, and non-verbal emotional processing)",
-    x = "Psychiatric Disorder",
-    y = "Delta Power Coefficient (95% CI)",
-    caption = "Multiple disorders show reduced right temporal delta power, with significant decreases in adjustment and\nbehavioral addiction disorders, indicating right-hemisphere compensation or altered connectivity patterns."
-  ) +
-  theme_minimal() +
-  theme(
-    plot.title = element_text(size = 14, face = "bold"),
-    plot.subtitle = element_text(size = 11, color = "gray30"),
-    plot.caption = element_text(size = 10, color = "gray40", hjust = 0),
-    axis.text.y = element_text(size = 10),
-    legend.position = "bottom"
-  )
-
-# Display the plots
-print(f7_plot)
-print(f8_plot)
+print(scatter_plot)
 ```
 
+```{r}
+# Load libraries quietly
+suppressPackageStartupMessages({
+  library(tidyverse)
+  library(ggplot2)
+  library(dplyr)
+  library(tidyr)
+  library(plotly)
+  library(htmlwidgets)
+})
+
+# Load dataset
+extract_path <- "C:/Users/jishn/projects/Psychiatric-diagnosis"
+file_path <- file.path(extract_path, "EEG.machinelearing_data_BRMH.csv")
+x <- read.csv(file_path)
+
+library(ggplot2)
+library(dplyr)
+library(tidyr)
+
+# Load data
+data <- read.csv("EEG.machinelearing_data_BRMH.csv")
+
+# Identify key delta electrodes by exact match
+key_delta_cols <- c("AB.A.delta.a.FP1",
+                    "AB.A.delta.d.F3",
+                    "AB.A.delta.i.C3",
+                    "AB.A.delta.o.Pz",
+                    "AB.A.delta.r.O1")
+
+# Pivot longer for plotting
+data_long <- data %>%
+  select(specific.disorder, all_of(key_delta_cols)) %>%
+  pivot_longer(cols = -specific.disorder,
+               names_to = "Position",
+               values_to = "DeltaPower")
+
+# Clean position names (remove prefix)
+data_long$Position <- sub(".*\\.", "", data_long$Position)
+```
+
+```{r}
+# ---------------------------
+# Bar chart with error bars
+# ---------------------------
+summary_stats <- x %>%
+  group_by(specific.disorder) %>%
+  summarise(
+    mean_fp1 = mean(AB.A.delta.a.FP1, na.rm = TRUE),
+    mean_fp2 = mean(AB.A.delta.b.FP2, na.rm = TRUE),
+    se_fp1 = sd(AB.A.delta.a.FP1, na.rm = TRUE)/sqrt(n()),
+    se_fp2 = sd(AB.A.delta.b.FP2, na.rm = TRUE)/sqrt(n()),
+    .groups = "drop"
+  )
+
+summary_long <- summary_stats %>%
+  pivot_longer(cols = c(mean_fp1, mean_fp2, se_fp1, se_fp2),
+               names_to = c(".value", "electrode"),
+               names_pattern = "(mean|se)_(fp1|fp2)")
+
+summary_plot <- ggplot(summary_long, aes(x = specific.disorder, y = mean, fill = electrode)) +
+  geom_bar(stat = "identity", position = position_dodge(width = 0.8)) +
+  geom_errorbar(aes(ymin = mean - 1.96*se, ymax = mean + 1.96*se),
+                position = position_dodge(width = 0.8), width = 0.2) +
+  theme_minimal() +
+  labs(
+    title = "Mean Delta Power by Disorder",
+    subtitle = "FP1 and FP2 show similar delta power readings across psychiatric disorders (±95% CI)",
+    x = "Disorder",
+    y = "Mean Absolute Delta Power",
+    fill = "Electrode"
+  ) +
+  theme(
+    axis.text.x = element_text(angle = 45, hjust = 1, size = 8),
+    plot.title = element_text(hjust = 0.5, size = 12),
+    plot.subtitle = element_text(hjust = 0.5, size = 9, color = "gray50"),
+    axis.title = element_text(size = 10),
+    axis.text.y = element_text(size = 8),
+    legend.title = element_text(size = 9),
+    legend.text = element_text(size = 8),
+    legend.key.size = unit(0.5, "cm"),
+    plot.margin = margin(15, 10, 10, 30)
+  )
+
+print(summary_plot)
+```
+
+```{r}
+#| fig-width: 10
+#| fig-height: 6
+
+# Load required packages
+library(tidyverse)
+
+# Set working directory to ensure correct file path
+setwd("c:/Users/jishn/projects/Psychiatric-diagnosis")
+
+# Read the CSV file with the correct name
+data_text <- read.csv("EEG.machinelearing_data_BRMH.csv")
+
+# Select relevant columns for FP1 and FP2
+fp1_columns <- c("AB.A.delta.a.FP1", "AB.B.theta.a.FP1", "AB.C.alpha.a.FP1", 
+                 "AB.D.beta.a.FP1", "AB.E.highbeta.a.FP1", "AB.F.gamma.a.FP1")
+fp2_columns <- c("AB.A.delta.b.FP2", "AB.B.theta.b.FP2", "AB.C.alpha.b.FP2", 
+                 "AB.D.beta.b.FP2", "AB.E.highbeta.b.FP2", "AB.F.gamma.b.FP2")
+
+# Process data: Calculate mean power by specific disorder
+fp1_data <- data_text %>%
+  group_by(specific.disorder) %>%
+  summarise(across(all_of(fp1_columns), mean, na.rm = TRUE)) %>%
+  pivot_longer(cols = all_of(fp1_columns), 
+               names_to = "band", 
+               values_to = "power") %>%
+  mutate(band = case_when(
+    band == "AB.A.delta.a.FP1" ~ "Delta",
+    band == "AB.B.theta.a.FP1" ~ "Theta",
+    band == "AB.C.alpha.a.FP1" ~ "Alpha",
+    band == "AB.D.beta.a.FP1" ~ "Beta",
+    band == "AB.E.highbeta.a.FP1" ~ "HighBeta",
+    band == "AB.F.gamma.a.FP1" ~ "Gamma"
+  ))
+
+fp2_data <- data_text %>%
+  group_by(specific.disorder) %>%
+  summarise(across(all_of(fp2_columns), mean, na.rm = TRUE)) %>%
+  pivot_longer(cols = all_of(fp2_columns), 
+               names_to = "band", 
+               values_to = "power") %>%
+  mutate(band = case_when(
+    band == "AB.A.delta.b.FP2" ~ "Delta",
+    band == "AB.B.theta.b.FP2" ~ "Theta",
+    band == "AB.C.alpha.b.FP2" ~ "Alpha",
+    band == "AB.D.beta.b.FP2" ~ "Beta",
+    band == "AB.E.highbeta.b.FP2" ~ "HighBeta",
+    band == "AB.F.gamma.b.FP2" ~ "Gamma"
+  ))
+
+# Calculate total power for ordering
+total_power_fp1 <- fp1_data %>%
+  group_by(specific.disorder) %>%
+  summarise(total_power = sum(power, na.rm = TRUE)) %>%
+  arrange(total_power)
+
+total_power_fp2 <- fp2_data %>%
+  group_by(specific.disorder) %>%
+  summarise(total_power = sum(power, na.rm = TRUE)) %>%
+  arrange(total_power)
+
+# Merge total power back into fp1_data and fp2_data
+fp1_data <- fp1_data %>%
+  left_join(total_power_fp1, by = "specific.disorder")
+fp2_data <- fp2_data %>%
+  left_join(total_power_fp2, by = "specific.disorder")
+
+# Reorder specific.disorder: "Healthy control" first, then by total_power
+fp1_data$specific.disorder <- fct_relevel(fp1_data$specific.disorder, "Healthy control") %>%
+  fct_reorder(., fp1_data$total_power)
+fp2_data$specific.disorder <- fct_relevel(fp2_data$specific.disorder, "Healthy control") %>%
+  fct_reorder(., fp2_data$total_power)
+
+# Define colors for frequency bands
+band_colors <- c("Delta" = "#FF6B6B", "Theta" = "#4ECDC4", "Alpha" = "#45B7D1", 
+                 "Beta" = "#96CEB4", "HighBeta" = "#FFEEAD", "Gamma" = "#D4A5A5")
+
+# Plot for FP1
+fp1_plot <- ggplot(fp1_data, aes(x = specific.disorder, y = power, fill = band)) +
+  geom_bar(stat = "identity") +
+  scale_fill_manual(values = band_colors) +
+  labs(
+    title = "Average EEG Power at FP1 by Specific Disorder",
+    subtitle = "FP1 = Left Frontal Electrode",
+    x = "Disorder",
+    y = "Average Power",
+    fill = "Frequency Band"
+  ) +
+  theme_minimal() +
+  theme(
+    axis.text.x = element_text(angle = 45, hjust = 1, size = 8),
+    plot.title = element_text(hjust = 0.5, size = 12),
+    plot.subtitle = element_text(hjust = 0.5, size = 9, color = "gray50"),
+    axis.title = element_text(size = 10),
+    axis.text.y = element_text(size = 8),
+    legend.title = element_text(size = 9),
+    legend.text = element_text(size = 8),
+    legend.key.size = unit(0.4, "cm"),
+    plot.margin = margin(15, 10, 10, 30)
+  )
+
+# Plot for FP2
+fp2_plot <- ggplot(fp2_data, aes(x = specific.disorder, y = power, fill = band)) +
+  geom_bar(stat = "identity") +
+  scale_fill_manual(values = band_colors) +
+  labs(
+    title = "Average EEG Power at FP2 by Specific Disorder",
+    subtitle = "FP2 = Right Frontal Electrode",
+    x = "Disorder",
+    y = "Average Power",
+    fill = "Frequency Band"
+  ) +
+   theme_minimal() +
+  theme(
+    axis.text.x = element_text(angle = 45, hjust = 1, size = 8),
+    plot.title = element_text(hjust = 0.5, size = 12),
+    plot.subtitle = element_text(hjust = 0.5, size = 9, color = "gray50"),
+    axis.title = element_text(size = 10),
+    axis.text.y = element_text(size = 8),
+    legend.title = element_text(size = 9),
+    legend.text = element_text(size = 8),
+    legend.key.size = unit(0.4, "cm"),
+    plot.margin = margin(15, 10, 10, 30)
+  )
+
+# Display plots in Quarto
+print(fp1_plot)
+print(fp2_plot)
+
+# Save plots as PNG files
+ggsave("FP1_EEG_Power.png", fp1_plot, width = 10, height = 6, dpi = 300)
+ggsave("FP2_EEG_Power.png", fp2_plot, width = 10, height = 6, dpi = 300)
+```
+
+Healthy control subjects typically exhibit higher alpha power at FP1 and FP2 compared to other disorders, potentially indicating greater relaxation or focused attention.
 
