--- a/index.qmd
+++ b/index.qmd
@@ -8,12 +8,24 @@ execute:
   message: false
 ---
 
+::: {.callout-note}
+**EEG** (ElectroEncephaloGram) measures electrical activity of the brain via electrodes placed on the scalp
+:::
 
-# EEG = ElectroEncephaloGram
-# - Measures electrical activity of the brain via the usage of electrodes on the scalp
+![EEG Electrode Placement Map showing F7 and F8 positions highlighted in yellow](electrode_map.png){width=60% fig-align="center"}
 
+*The above diagram shows the standard 10-20 EEG electrode placement system. F7 (left) and F8 (right) electrodes, highlighted in yellow, are positioned over the anterior temporal cortex regions that we analyzed in this study. The anterior temporal cortex examines semantic memory or memory which are essentially facts.*
+
+::: {.callout-note}
+**F7 Electrode**: Positioned over left anterior temporal cortex (language processing, emotional memory, and auditory processing)
+:::
 
 ```{r}
+#| fig-width: 12
+#| fig-height: 8
+#| out-width: "100%"
+#| dpi: 300
+
 # Load required libraries
 library(ggplot2)
 library(dplyr)
@@ -40,225 +52,88 @@ coeff_data <- data.frame(
 coeff_data$f7_significant <- !(coeff_data$f7_conf_low <= 0 & coeff_data$f7_conf_high >= 0)
 coeff_data$f8_significant <- !(coeff_data$f8_conf_low <= 0 & coeff_data$f8_conf_high >= 0)
 
+# Shorten disorder names for better display
+coeff_data$disorder_short <- c("Acute stress", "Adjustment", "Alcohol use", 
+                               "Behavioral addiction", "Bipolar", "Depressive",
+                               "Obsessive compulsive", "Panic", "PTSD",
+                               "Schizophrenia", "Social anxiety")
+
 # Create F7 plot
-f7_plot <- ggplot(coeff_data, aes(x = reorder(disorder, f7_estimate), y = f7_estimate)) +
+f7_plot <- ggplot(coeff_data, aes(x = reorder(disorder_short, f7_estimate), y = f7_estimate)) +
   geom_point(aes(color = f7_significant), size = 3) +
   geom_errorbar(aes(ymin = f7_conf_low, ymax = f7_conf_high, color = f7_significant), 
-                width = 0.2, size = 0.8) +
+                width = 0.3, size = 0.8) +
   geom_hline(yintercept = 0, linetype = "dashed", color = "gray50") +
   scale_color_manual(values = c("FALSE" = "gray60", "TRUE" = "#e74c3c"), 
                      name = "Significant", labels = c("No", "Yes")) +
   coord_flip() +
   labs(
     title = "Delta Power Coefficients at F7 Electrode by Psychiatric Disorder",
-    subtitle = "F7 electrode positioned over left anterior temporal cortex\n(language processing, emotional memory, and auditory processing)",
+    subtitle = "Four disorders show significantly increased left temporal delta power (bipolar, panic, social anxiety, schizophrenia),\nsuggesting shared left-lateralized dysfunction in emotional and cognitive processing regions.",
     x = "Psychiatric Disorder",
     y = "Delta Power Coefficient (95% CI)",
-    caption = "Four disorders show significantly increased left temporal delta power (bipolar, panic, social anxiety, schizophrenia),\nsuggesting shared left-lateralized dysfunction in emotional and cognitive processing regions."
+    caption = "Source: EEG Psychiatric Disorders Dataset from Kaggle"
   ) +
   theme_minimal() +
   theme(
     plot.title = element_text(size = 14, face = "bold"),
     plot.subtitle = element_text(size = 11, color = "gray30"),
-    plot.caption = element_text(size = 10, color = "gray40", hjust = 0),
+    plot.caption = element_text(size = 9, color = "gray50", hjust = 1),
     axis.text.y = element_text(size = 10),
-    legend.position = "bottom"
+    axis.text.x = element_text(size = 10),
+    legend.position = "bottom",
+    plot.margin = margin(10, 10, 10, 10)
   )
 
+f7_plot
+```
+
+::: {.callout-note}
+**F8 Electrode**: Positioned over right anterior temporal cortex (spatial processing, prosody, and non-verbal emotional processing)
+:::
+
+```{r}
+#| fig-width: 12
+#| fig-height: 8
+#| out-width: "100%"
+#| dpi: 300
+
+# Shorten disorder names for better display
+coeff_data$disorder_short <- c("Acute stress", "Adjustment", "Alcohol use", 
+                               "Behavioral addiction", "Bipolar", "Depressive",
+                               "Obsessive compulsive", "Panic", "PTSD",
+                               "Schizophrenia", "Social anxiety")
+
 # Create F8 plot
-f8_plot <- ggplot(coeff_data, aes(x = reorder(disorder, f8_estimate), y = f8_estimate)) +
+f8_plot <- ggplot(coeff_data, aes(x = reorder(disorder_short, f8_estimate), y = f8_estimate)) +
   geom_point(aes(color = f8_significant), size = 3) +
   geom_errorbar(aes(ymin = f8_conf_low, ymax = f8_conf_high, color = f8_significant), 
-                width = 0.2, size = 0.8) +
+                width = 0.3, size = 0.8) +
   geom_hline(yintercept = 0, linetype = "dashed", color = "gray50") +
   scale_color_manual(values = c("FALSE" = "gray60", "TRUE" = "#3498db"), 
                      name = "Significant", labels = c("No", "Yes")) +
   coord_flip() +
   labs(
     title = "Delta Power Coefficients at F8 Electrode by Psychiatric Disorder",
-    subtitle = "F8 electrode positioned over right anterior temporal cortex\n(spatial processing, prosody, and non-verbal emotional processing)",
+    subtitle = "Multiple disorders show reduced right temporal delta power, with significant decreases in adjustment and\nbehavioral addiction disorders, indicating right-hemisphere compensation or altered connectivity patterns.",
     x = "Psychiatric Disorder",
     y = "Delta Power Coefficient (95% CI)",
-    caption = "Multiple disorders show reduced right temporal delta power, with significant decreases in adjustment and\nbehavioral addiction disorders, indicating right-hemisphere compensation or altered connectivity patterns."
+    caption = "Source: EEG Psychiatric Disorders Dataset from Kaggle"
   ) +
   theme_minimal() +
   theme(
     plot.title = element_text(size = 14, face = "bold"),
     plot.subtitle = element_text(size = 11, color = "gray30"),
-    plot.caption = element_text(size = 10, color = "gray40", hjust = 0),
+    plot.caption = element_text(size = 9, color = "gray50", hjust = 1),
     axis.text.y = element_text(size = 10),
-    legend.position = "bottom"
+    axis.text.x = element_text(size = 10),
+    legend.position = "bottom",
+    plot.margin = margin(10, 10, 10, 10)
   )
 
-# Display the plots
-print(f7_plot)
-print(f8_plot)
+f8_plot
 ```
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-# (make above words way smaller + add subtitle to graph explaining FP1 = Left electrode & FP2 = Right electrode)
-```{r}
-# Load required packages
-library(tidyverse)
-
-# Set working directory to ensure correct file path
-setwd("c:/Users/jishn/projects/Psychiatric-diagnosis")
-
-# Read the CSV file with the correct name
-data_text <- read.csv("EEG.machinelearing_data_BRMH.csv")
-
-# Select relevant columns for FP1 and FP2
-fp1_columns <- c("AB.A.delta.a.FP1", "AB.B.theta.a.FP1", "AB.C.alpha.a.FP1", 
-                 "AB.D.beta.a.FP1", "AB.E.highbeta.a.FP1", "AB.F.gamma.a.FP1")
-fp2_columns <- c("AB.A.delta.b.FP2", "AB.B.theta.b.FP2", "AB.C.alpha.b.FP2", 
-                 "AB.D.beta.b.FP2", "AB.E.highbeta.b.FP2", "AB.F.gamma.b.FP2")
-
-# Process data: Calculate mean power by specific disorder
-fp1_data <- data_text %>%
-  group_by(specific.disorder) %>%
-  summarise(across(all_of(fp1_columns), mean, na.rm = TRUE)) %>%
-  pivot_longer(cols = all_of(fp1_columns), 
-               names_to = "band", 
-               values_to = "power") %>%
-  mutate(band = case_when(
-    band == "AB.A.delta.a.FP1" ~ "Delta",
-    band == "AB.B.theta.a.FP1" ~ "Theta",
-    band == "AB.C.alpha.a.FP1" ~ "Alpha",
-    band == "AB.D.beta.a.FP1" ~ "Beta",
-    band == "AB.E.highbeta.a.FP1" ~ "HighBeta",
-    band == "AB.F.gamma.a.FP1" ~ "Gamma"
-  ))
-
-fp2_data <- data_text %>%
-  group_by(specific.disorder) %>%
-  summarise(across(all_of(fp2_columns), mean, na.rm = TRUE)) %>%
-  pivot_longer(cols = all_of(fp2_columns), 
-               names_to = "band", 
-               values_to = "power") %>%
-  mutate(band = case_when(
-    band == "AB.A.delta.b.FP2" ~ "Delta",
-    band == "AB.B.theta.b.FP2" ~ "Theta",
-    band == "AB.C.alpha.b.FP2" ~ "Alpha",
-    band == "AB.D.beta.b.FP2" ~ "Beta",
-    band == "AB.E.highbeta.b.FP2" ~ "HighBeta",
-    band == "AB.F.gamma.b.FP2" ~ "Gamma"
-  ))
-
-# Calculate total power for ordering
-total_power_fp1 <- fp1_data %>%
-  group_by(specific.disorder) %>%
-  summarise(total_power = sum(power, na.rm = TRUE)) %>%
-  arrange(total_power)
-
-total_power_fp2 <- fp2_data %>%
-  group_by(specific.disorder) %>%
-  summarise(total_power = sum(power, na.rm = TRUE)) %>%
-  arrange(total_power)
-
-# Merge total power back into fp1_data and fp2_data
-fp1_data <- fp1_data %>%
-  left_join(total_power_fp1, by = "specific.disorder")
-fp2_data <- fp2_data %>%
-  left_join(total_power_fp2, by = "specific.disorder")
-
-# Reorder specific.disorder: "Healthy control" first, then by total_power
-fp1_data$specific.disorder <- fct_relevel(fp1_data$specific.disorder, "Healthy control") %>%
-  fct_reorder(., fp1_data$total_power)
-fp2_data$specific.disorder <- fct_relevel(fp2_data$specific.disorder, "Healthy control") %>%
-  fct_reorder(., fp2_data$total_power)
-
-# Define colors for frequency bands
-band_colors <- c("Delta" = "#FF6B6B", "Theta" = "#4ECDC4", "Alpha" = "#45B7D1", 
-                 "Beta" = "#96CEB4", "HighBeta" = "#FFEEAD", "Gamma" = "#D4A5A5")
-
-# Plot for FP1
-fp1_plot <- ggplot(fp1_data, aes(x = specific.disorder, y = power, fill = band)) +
-  geom_bar(stat = "identity") +
-  scale_fill_manual(values = band_colors) +
-  labs(title = "Average EEG Power at FP1 by Specific Disorder",
-       x = "Specific Disorder",
-       y = "Average Power",
-       fill = "Frequency Band") +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
-
-# Plot for FP2
-fp2_plot <- ggplot(fp2_data, aes(x = specific.disorder, y = power, fill = band)) +
-  geom_bar(stat = "identity") +
-  scale_fill_manual(values = band_colors) +
-  labs(title = "Average EEG Power at FP2 by Specific Disorder",
-       x = "Specific Disorder",
-       y = "Average Power",
-       fill = "Frequency Band") +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
-
-# Display plots in Quarto
-print(fp1_plot)
-print(fp2_plot)
-
-# Save plots as PNG files
-ggsave("FP1_EEG_Power.png", fp1_plot, width = 10, height = 6, dpi = 300)
-ggsave("FP2_EEG_Power.png", fp2_plot, width = 10, height = 6, dpi = 300)
-
-# Print interesting fact
-cat(" 'Healthy control' subjects may exhibit higher alpha power at FP1 and FP2 compared to other disorders, potentially indicating greater relaxation or focused attention.")
-
-```
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 ###
+Psychiatric disorders are shaped by a wide range of neurological, cognitive, and demographic factors that can be captured through EEG data. Using the EEG Psychiatric Disorders Dataset from Kaggle, which includes variables such as age, gender, IQ, and brain wave readings from multiple electrode positions, we seek to understand the relationship between temporal lobe activity and psychiatric conditions. The data was cleaned by filtering out incomplete records and focusing on delta power values at the F7 and F8 temporal electrodes to explore patterns of neural activity across disorders. While descriptive analysis showed elevated EEG power across psychiatric disorders compared to healthy controls, multinomial regression revealed that the temporal regions showed the most significant associations with psychiatric diagnoses. Specifically, F7 (left anterior temporal) electrode showed significantly increased delta power in four disorders—bipolar disorder, panic disorder, social anxiety disorder, and schizophrenia—while F8 (right anterior temporal) showed significant decreases in adjustment disorder and behavioral addiction disorder. These patterns suggest hemispheric asymmetry in psychiatric conditions, with left temporal hyperactivity potentially reflecting disrupted language processing, emotional memory, and auditory integration, while right temporal hypoactivity may indicate altered spatial processing and non-verbal emotional regulation. We modeled psychiatric diagnosis as a categorical outcome using a multinomial model based on brainwave activity, age, gender, and cognitive ability. Bipolar disorder, panic disorder, social anxiety disorder, and schizophrenia all show significantly increased left temporal (F7) delta power, with bipolar disorder demonstrating the strongest effect at 0.080 units (95% CI: 0.018 to 0.143), suggesting that left-hemisphere temporal abnormalities could potentially aid in early detection and diagnosis of these specific psychiatric conditions, though the wide confidence intervals indicate substantial uncertainty in the true magnitude of these neurological signatures.
 
-Psychiatric disorders are shaped by a wide range of neurological, cognitive, and demographic factors that can be captured through EEG data. Using the EEG Psychiatric Disorders Dataset from Kaggle, which includes variables such as age, gender, IQ, and EEG readings, we seek to understand the relationship between brainwave activity and psychiatric conditions. The data was cleaned by filtering out incomplete records and focusing on delta power values at the FP1 and FP2 electrodes to explore patterns of neural slowing across disorders. While delta power at FP1 and FP2 electrodes are strongly correlated across disorders, compared to healthy controls, all psychiatric disorders show elevated frontal EEG power, with stress and trauma-related disorders demonstrating the most pronounced increases. These patterns are primarily driven by Theta and Alpha band activity, supporting a shared mechanism of frontal dysregulation across psychiatric categories, with unique variations in power depending on the specific disorder type and suggesting that pronounced neural slowing may distinguish these conditions from others. We modeled psychiatric diagnosis as a categorical outcome using a multinomial model based on brainwave activity, age, gender, and cognitive ability. Individuals with unusually high frontal delta power were more likely to be classified with acute stress disorder or posttraumatic stress disorder (PTSD).
-
-
-This project examined how frontal EEG activity relates to psychiatric diagnoses using a dataset containing brainwave, cognitive, and demographic data. We focused on delta power at the FP1 and FP2 electrodes to explore patterns of neural slowing across disorders. Healthy individuals showed the lowest EEG power, while mood disorders showed moderate increases in Theta and Alpha bands, reflecting emotional dysregulation. Power distributions were similar between hemispheres, suggesting coordinated frontal activity, though subtle right-sided Theta increases were seen in schizophrenia. Individuals with unusually high frontal delta power were more likely to be classified with acute stress disorder or PTSD.
